crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_7_summary_dusk_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                          Afterglow Dark









           ╭ 5 · Ready to save ─────────────────────────────────────────────────────────╮
           │ Here's what will be saved:                                                 │
           │                                                                            │
           │   github.com (smorris) · my repositories                                   │
           │                                                                            │
           │ Look: Afterglow Dark · Jax around                                          │
           │ Config: /home/u/.config/review-buddy/config.toml                           │
           │                                                                            │
           │ [ Back ]  [ Save ⏎ ]  [ Skip for now · esc ]                               │
           ╰────────────────────────────────────────────────────────────────────────────╯









 ⏎ continue  space pick  esc skip for now
