crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_7_summary_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                                    Dusk









           ╭ 5 · Ready to save ─────────────────────────────────────────────────────────╮
           │ Here's what will be saved:                                                 │
           │                                                                            │
           │   github.com (smorris) · my repositories                                   │
           │                                                                            │
           │ Look: Dusk · Jax around                                                    │
           │ Config: /home/u/.config/review-buddy/config.toml                           │
           │                                                                            │
           │ [ Back ]  [ Save ⏎ ]  [ Skip for now · esc ]                               │
           ╰────────────────────────────────────────────────────────────────────────────╯









 ⏎ continue  ← → buttons  ⌫ back  space pick  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:94 D " Dusk"
10:11 B "╭ 5 · Ready to save ─────────────────────────────────────────────────────────╮"
11:11 B "│"
11:13 D "Here's what will be saved:"
11:88 B "│"
12:11 B "│"
12:88 B "│"
13:11 B "│"
13:13 B "  github.com (smorris)"
13:35 D " · my repositories"
13:88 B "│"
14:11 B "│"
14:88 B "│"
15:11 B "│"
15:88 B "│"
16:11 B "│"
16:13 D "Config: /home/u/.config/review-buddy/config.toml"
16:88 B "│"
17:11 B "│"
17:88 B "│"
18:11 B "│"
18:13 D "[ Back ]"
18:23 B "[ Save ⏎ ]"
18:35 D "[ Skip for now · esc ]"
18:88 B "│"
19:11 B "╰────────────────────────────────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " continue"
29:13 B "← →"
29:16 D " buttons"
29:26 B "⌫"
29:27 D " back"
29:34 B "space"
29:39 D " pick"
29:46 B "esc"
29:49 D " skip for now"
