crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_7_summary_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                                                                                                Dusk














                                         ╭ 5 · Ready to save ─────────────────────────────────────────────────────────╮
                                         │ Here's what will be saved:                                                 │
                                         │                                                                            │
                                         │   github.com (smorris) · my repositories                                   │
                                         │                                                                            │
                                         │ Look: Dusk · Jax around                                                    │
                                         │ Config: /home/u/.config/review-buddy/config.toml                           │
                                         │                                                                            │
                                         │ [ Back ]  [ Save ⏎ ]  [ Skip for now · esc ]                               │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  ← → buttons  ⌫ back  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:154 D " Dusk"
15:41 B "╭ 5 · Ready to save ─────────────────────────────────────────────────────────╮"
16:41 B "│"
16:43 D "Here's what will be saved:"
16:118 B "│"
17:41 B "│"
17:118 B "│"
18:41 B "│"
18:43 B "  github.com (smorris)"
18:65 D " · my repositories"
18:118 B "│"
19:41 B "│"
19:118 B "│"
20:41 B "│"
20:118 B "│"
21:41 B "│"
21:43 D "Config: /home/u/.config/review-buddy/config.toml"
21:118 B "│"
22:41 B "│"
22:118 B "│"
23:41 B "│"
23:43 D "[ Back ]"
23:53 B "[ Save ⏎ ]"
23:65 D "[ Skip for now · esc ]"
23:118 B "│"
24:41 B "╰────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " continue"
39:13 B "← →"
39:16 D " buttons"
39:26 B "⌫"
39:27 D " back"
39:34 B "esc"
39:37 D " skip for now"
